add support for defining custom resources